<resources>
    <string name="app_name">Your Task App</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="don_t_have_account">Don\'t have account? Sign up here</string>
    <string name="already_have_account">Already have account? Log in here</string>
    <string name="log_in_text">Log In</string>
    <string name="registration_text">Registration</string>
    <string name="title_custom_input_field">Title:</string>
    <string name="note_custom_input_field">Note:</string>
    <string name="save">SAVE</string>
    <string name="add_your_task">Add your daily task</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="update_your_task">Update your daily Task</string>
</resources>
