<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backdesign"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center"
        android:gravity="center"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:background="@drawable/edtdesign"
        android:padding="10dp"
        android:textColorHint="@android:color/white"
        android:id="@+id/email_login"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:background="@drawable/edtdesign"
        android:padding="10dp"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword"
        android:id="@+id/password_login"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/log_in_text"
        android:background="@drawable/edtdesign"
        android:textColor="@android:color/white"
        android:id="@+id/login_btn"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="7dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@+id/signup_txt"
        />


</LinearLayout>