<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/add_your_task"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/backdesign"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/title_custom_input_field"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/edt_title_upd"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/note_custom_input_field"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/edt_note_upd"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/btndesign"
                        android:text="@string/delete"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:id="@+id/btn_delete"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/btndesign"
                        android:text="@string/update"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:id="@+id/btn_update"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>